[package]
name = "fibonacci_heap"
version = "1.0.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance Fibonacci Heap implementation"
license = "MIT"
repository = "https://github.com/skull-squadron/fibonacci-heap-rs"
categories = ["data-structures", "algorithms"]
keywords = ["heap", "priority-queue", "fibonacci-heap", "rust"]

[dev-dependencies]
criterion = "0.7"

[features]
default = ["concurrent"]
concurrent = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
incremental = false

[profile.bench]
opt-level = 3

[[bench]]
name = "fibonacci_heap_benchmark"
path = "benches/fibonacci_heap_benchmark.rs"
harness = false

[dependencies]
paste = "1"
